--- a/encyclopedia/templates/encyclopedia/index.html
+++ b/encyclopedia/templates/encyclopedia/index.html
@@ -1,1 +1,6 @@
-
+{% extends "encyclopedia/layout.html" %} {% block title %} Encyclopedia {% endblock %} {% block body %}
+All Pages
+{% for entry in entries %}
+{{ entry }}
+{% endfor %}
+{% endblock %}
