--- a/encyclopedia/templates/encyclopedia/index.html
+++ b/encyclopedia/templates/encyclopedia/index.html
@@ -1,6 +1,20 @@
-{% extends "encyclopedia/layout.html" %} {% block title %} Encyclopedia {% endblock %} {% block body %}
-All Pages
-{% for entry in entries %}
-{{ entry }}
-{% endfor %}
+{% extends "encyclopedia/layout.html" %}
+
+{% block title %}
+    Home
+{% endblock %}
+
+{% block body %}
+    <h1> Welcome to wikipedia!</h1>
+
+    <p>wikipedia is a wikipedia-like website, made as a student project for Harvard's CS50 Web course. Users can search, view, create and edit entry pages on the site. Github Markdown is used to input the page contents, which is converted to HTML when users request an entry page.</p>
+
+    <h2>All Pages:</h2>
+
+    <ul>
+        {% for entry in entries %}
+            <li><a href="{% url 'entry' title=entry %}">{{ entry }}</a></li>
+        {% endfor %}
+    </ul>
+
 {% endblock %}
