--- a/encyclopedia/templates/encyclopedia/search.html
+++ b/encyclopedia/templates/encyclopedia/search.html
@@ -16,7 +16,7 @@
       {% endfor %}
     </ul>
   {% else %}
-  <p>No search results found for "{{title}}" on qwikipedia.</p>
+  <p>No search results found for "{{title}}" on wikipedia.</p>
   <p>Check the <a href="{% url 'index' %}">index</a> page to see available articles.</p>
   {% endif %}
 
