--- a/encyclopedia/templates/encyclopedia/index.html
+++ b/encyclopedia/templates/encyclopedia/index.html
@@ -1,20 +1,22 @@
 {% extends "encyclopedia/layout.html" %}
 
 {% block title %}
-    Home
+    Encyclopedia
 {% endblock %}
-
+{% block nav-home %}<li class="nav-active">Home</li>{% endblock %}
 {% block body %}
-    <h1> Welcome to wikipedia!</h1>
+    <div id="index">
+        <!-- <h1>Pages</h1> -->
+        
+        <ul id ="show_list">
+           
+            {% for entry in entries %}
+               
+                <li><a href= "{% url 'wiki:title' title=entry %}">{{ entry }}</a> </li> 
+              
+            {% endfor %}
+        </ul>
+    
+    </div>
 
-    <p>wikipedia is a wikipedia-like website, made as a student project for Harvard's CS50 Web course. Users can search, view, create and edit entry pages on the site. Github Markdown is used to input the page contents, which is converted to HTML when users request an entry page.</p>
-
-    <h2>All Pages:</h2>
-
-    <ul>
-        {% for entry in entries %}
-            <li><a href="{% url 'entry' title=entry %}">{{ entry }}</a></li>
-        {% endfor %}
-    </ul>
-
-{% endblock %}
+{% endblock %}}
