--- a/encyclopedia/templates/encyclopedia/layout.html
+++ b/encyclopedia/templates/encyclopedia/layout.html
@@ -4,71 +4,59 @@
 
 <html lang="en">
     <head>
-        <title>wikipedia: {% block title %}{% endblock %}</title>
+        <title>{% block title %}{% endblock %}</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
         <link href="{% static 'encyclopedia/styles.css' %}" rel="stylesheet">
-        <link rel="apple-touch-icon" sizes="180x180" href="{% static 'encyclopedia/favicons/apple-touch-icon.png' %}">
-        <link rel="icon" type="image/png" sizes="32x32" href="{% static 'encyclopedia/favicons/favicon-32x32.png' %}">
-        <link rel="icon" type="image/png" sizes="16x16" href="{% static 'encyclopedia/favicons/favicon-16x16.png' %}">
-        <link rel="manifest" href="{% static 'encyclopedia/favicons/site.webmanifest' %}">
-
-
     </head>
     <body>
+        {% block nav %}
+        <div class = "navigationbar">
+            <nav class="navbar navbar-expand-lg nav-pills mb-3 ">
+                <a class="navbar-brand" href="{% url 'wiki:index' %}"><h1>Wiki</h1></a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ">
+                    <li class="nav-item ">
+                        {% block nav-home %}
+                            <a class="nav-link" href="{% url 'wiki:index' %}">Home<span class="sr-only">(current)</span></a>
+                        {% endblock %}
+                    </li>
+        
+                    <li class="nav-item ">
+                        {% block nav-create %}
+                            <a class="nav-link " href = "{% url 'wiki:create' %}">Create New Page</a>
+                        {% endblock %}
+                    </li>
+                    <li class="nav-item ">
+                        {% block nav-random %}
+                            <a class="nav-link"  href = "{% url 'wiki:random' %}">Random Page</a>
+                        {% endblock %}
+                    </li>
+    
+                    </ul>
+                </div>
+            </nav>
+        </div>
+        {% endblock %}
         <div class="row">
-            <div class="sidebar col-lg-2 col-md-3">
-                <img class="logo" src="{% static 'encyclopedia/logo.png' %}">
-                <h2>wikipedia</h2>
-                <form action="{% url 'search' %}" method="post">
-                    {% csrf_token %}
-                    {{ search_form }}
+            <div class="sidebar col-lg-3 col-md-3">
+                
+                <form action="{% url 'wiki:search_results'  %}" method="GET" class="search">
+                    
+                    {{form}}
+
+                    <input  id = "search" type="submit" value = "search">
+                    
                 </form>
-                <div>
-                    <a href="{% url 'index' %}">Home</a>
-                </div>
-                <div>
-                    <a href ="{% url 'create' %}">Create New Page</a>
-                </div>
-                <div>
-                    <a href ="{% url 'random_title' %}">Random Page</a>
-                </div>
-                {% block nav %}
-                {% endblock %}
+
+                
             </div>
-            <div class="main col-lg-10 col-md-9">
-                <!--Flashed Messages -->
-                {% if messages %}
-                  <div class="messages">
-                  {% for message in messages %}
-                    <!-- Warning Messages-->
-                    {% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}
-                    <div class="alert alert-danger alert-dismissible fade show" role="alert">
-                      <strong>{{ message}}</strong>
-                      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                      <span aria-hidden="true">&times;</span>
-                      </button>
-                     </div>
-                    {% endif %}
-                    <!-- Success Messages -->
-                    {% if message.level == DEFAULT_MESSAGE_LEVELS.SUCCESS %}
-                      <div class="alert alert-success alert-dismissible fade show" role="alert">
-                        {{ message}}
-                      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                      <span aria-hidden="true">&times;</span>
-                      </button>
-                      </div>
-                    {% endif %}
-                  {% endfor %}
-                  </div>
-                {% endif %}
-
-                <!-- Main Page Body -->
+            <div class="main col-lg-9 col-md-9">
                 {% block body %}
+                
                 {% endblock %}
-
             </div>
         </div>
 
