--- a/encyclopedia/templates/encyclopedia/create.html
+++ b/encyclopedia/templates/encyclopedia/create.html
@@ -1,20 +1,13 @@
-{% extends "encyclopedia/layout.html" %}
+{% extends 'encyclopedia/layout.html' %}
 
 {% block title %}
-    Create New Page
+    New Page
 {% endblock %}
 
 {% block body %}
-
-  <h1>Create a new wikipedia Page:</h1>
-
-  <p>Use the form below to create a new wikipedia Page.</p>
-  <p>Please note that wikipedia uses <a href="https://docs.github.com/en/github/writing-on-github/basic-writing-and-formatting-syntax">Github Markdown</a> to style its pages, which is converted to HTML when entries are requested by a user.</p>
-
-  <form action="{% url 'create' %}" method="post">
-    {% csrf_token %}
-    {{ create_form }}
-    <input class= "btn btn-primary" type="submit" value="Submit">
-  </form>
-
+    <form action="{% url 'new_page' %}" method="POST">
+        {% csrf_token %}
+        {{ form }}
+        <input type="submit" value="Save">
+    </form>
 {% endblock %}
