--- a/encyclopedia/templates/encyclopedia/entry.html
+++ b/encyclopedia/templates/encyclopedia/entry.html
@@ -1,14 +1,10 @@
-
 {% extends "encyclopedia/layout.html" %}
 
 {% block title %}
-    {{title}}
+    Wiki. {{ entry_title }}
 {% endblock %}
 
 {% block body %}
-
-    {{entry|safe}}
-
-    <a class="btn btn-primary" href="{% url 'edit' title=title %}">Edit Page</a>
-
+    {{ entry_content|safe }}
+    <a href="{% url 'edit_page' entry_name=entry_title %}">Edit.</a>
 {% endblock %}
