--- a/encyclopedia/templates/encyclopedia/layout.html
+++ b/encyclopedia/templates/encyclopedia/layout.html
@@ -9,56 +9,28 @@
         <link href="{% static 'encyclopedia/styles.css' %}" rel="stylesheet">
     </head>
     <body>
-        {% block nav %}
-        <div class = "navigationbar">
-            <nav class="navbar navbar-expand-lg nav-pills mb-3 ">
-                <a class="navbar-brand" href="{% url 'wiki:index' %}"><h1>Wiki</h1></a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav ">
-                    <li class="nav-item ">
-                        {% block nav-home %}
-                            <a class="nav-link" href="{% url 'wiki:index' %}">Home<span class="sr-only">(current)</span></a>
-                        {% endblock %}
-                    </li>
-        
-                    <li class="nav-item ">
-                        {% block nav-create %}
-                            <a class="nav-link " href = "{% url 'wiki:create' %}">Create New Page</a>
-                        {% endblock %}
-                    </li>
-                    <li class="nav-item ">
-                        {% block nav-random %}
-                            <a class="nav-link"  href = "{% url 'wiki:random' %}">Random Page</a>
-                        {% endblock %}
-                    </li>
-    
-                    </ul>
-                </div>
-            </nav>
-        </div>
-        {% endblock %}
         <div class="row">
-            <div class="sidebar col-lg-3 col-md-3">
-                
-                <form action="{% url 'wiki:search_results'  %}" method="GET" class="search">
-                    
-                    {{form}}
-
-                    <input  id = "search" type="submit" value = "search">
-                    
+            <div class="sidebar col-lg-2 col-md-3">
+                <h2>Wiki</h2>
+                <form class="search" action="{% url 'search' %}">
+                    {{ search_form }}
                 </form>
-
-                
+                <div>
+                    <a href="{% url 'index' %}">Home</a>
+                </div>
+                <div>
+                    <a href="{% url 'new_page' %}">Create New Page</a>
+                </div>
+                <div>
+                    <a href="{% url 'random_page' %}">Random Page</a>
+                </div>
+                {% block nav %}
+                {% endblock %}
             </div>
-            <div class="main col-lg-9 col-md-9">
+            <div class="main col-lg-10 col-md-9">
                 {% block body %}
-                
                 {% endblock %}
             </div>
         </div>
 
     </body>
-</html>
