--- a/encyclopedia/templates/encyclopedia/error.html
+++ b/encyclopedia/templates/encyclopedia/error.html
@@ -1,24 +1,10 @@
 {% extends "encyclopedia/layout.html" %}
 
 {% block title %}
-    Entry not found: {{title}}
+    Encyclopedia
 {% endblock %}
 
 {% block body %}
 
-  <h1> Error: Entry "{{title}}" does not exist</h1>
-
-  <p>The requested entry "{{title}}" does not exist on wikipedia.</p>
-  <p>Check the <a href="{% url 'index' %}">index</a> page to see available articles.</p>
-
-  {% if related_titles %}
-  <p>Related Entries:</p>
-    <ul>
-      {% for title in related_titles %}
-      <li><a href="{% url 'entry' title=title %}">{{title}}</a></li>
-      {% endfor %}
-    </ul>
-  {% endif %}
-
+<h1 class="text-danger display-1"> Error 404 : Page Not Found </h1>
 {% endblock %}
-
