--- a/encyclopedia/templates/encyclopedia/layout.html
+++ b/encyclopedia/templates/encyclopedia/layout.html
@@ -3,37 +3,59 @@
 <!DOCTYPE html>
 
 <html lang="en">
-     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    
     <head>
         <title>{% block title %}{% endblock %}</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
         <link href="{% static 'encyclopedia/styles.css' %}" rel="stylesheet">
-        <link rel="stylesheet" href="css/styles.css">
     </head>
     <body>
+        {% block nav %}
+        <div class = "navigationbar">
+            <nav class="navbar navbar-expand-lg nav-pills mb-3 ">
+                <a class="navbar-brand" href="{% url 'wiki:index' %}"><h1>Wiki</h1></a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ">
+                    <li class="nav-item ">
+                        {% block nav-home %}
+                            <a class="nav-link" href="{% url 'wiki:index' %}">Home<span class="sr-only">(current)</span></a>
+                        {% endblock %}
+                    </li>
+        
+                    <li class="nav-item ">
+                        {% block nav-create %}
+                            <a class="nav-link " href = "{% url 'wiki:create' %}">Create New Page</a>
+                        {% endblock %}
+                    </li>
+                    <li class="nav-item ">
+                        {% block nav-random %}
+                            <a class="nav-link"  href = "{% url 'wiki:random' %}">Random Page</a>
+                        {% endblock %}
+                    </li>
+    
+                    </ul>
+                </div>
+            </nav>
+        </div>
+        {% endblock %}
         <div class="row">
-            <div class="sidebar col-lg-2 col-md-3">
-                <h2>Wiki</h2>
-                <form class="search" action="{% url 'search' %}">
-                    {{ search_form }}
+            <div class="sidebar col-lg-3 col-md-3">
+                
+                <form action="{% url 'wiki:search_results'  %}" method="GET" class="search">
+                    
+                    {{form}}
+
+                    <input  id = "search" type="submit" value = "search">
+                    
                 </form>
-                <div>
-                    <a href="{% url 'index' %}">Home</a>
-                </div>
-                <div>
-                    <a href="{% url 'new_page' %}">Create New Page</a>
-                </div>
-                <div>
-                    <a href="{% url 'random_page' %}">Random Page</a>
-                </div>
-                {% block nav %}
-                {% endblock %}
+
+                
             </div>
-            <div class="main col-lg-10 col-md-9">
+            <div class="main col-lg-9 col-md-9">
                 {% block body %}
+                
                 {% endblock %}
             </div>
         </div>
