--- a/encyclopedia/templates/encyclopedia/layout.html
+++ b/encyclopedia/templates/encyclopedia/layout.html
@@ -13,7 +13,7 @@
             <div class="sidebar col-lg-2 col-md-3">
                 <h2>Wiki</h2>
                 <form action="{% url 'search' %}" method="post">
-                   
+                       <input class="search" type="text" name="q" placeholder="Search Encyclopedia"> 
                 </form>
                 <div>
                     <a href="{% url 'index' %}">Home</a>
