--- a/encyclopedia/templates/encyclopedia/error.html
+++ b/encyclopedia/templates/encyclopedia/error.html
@@ -1,10 +1,8 @@
 {% extends "encyclopedia/layout.html" %}
-
 {% block title %}
-    Encyclopedia
+    Error.
 {% endblock %}
 
 {% block body %}
-
-<h1 class="text-danger display-1"> Error 404 : Page Not Found </h1>
+    <h1>Entry not found.</h1>
 {% endblock %}
