--- a/encyclopedia/templates/encyclopedia/edit.html
+++ b/encyclopedia/templates/encyclopedia/edit.html
@@ -1,21 +1,13 @@
-{{% extends "encyclopedia/layout.html" %}
+{% extends 'encyclopedia/layout.html' %}
 
 {% block title %}
     Edit page
 {% endblock %}
 
 {% block body %}
-  
-    <h1 class="display-3 text-secondary">{{title}}</h1>
-    
-    <form action="{% url 'wiki:save'  %}" method="POST">
-        {% csrf_token %}          
-        
-        {{edit_form}}
-        
-        <input id = "createpage" type="submit">
-        
-    </form> 
-
-
+    <form action="{% url 'edit_page' entry_name=form.title.value %}" method="POST">
+        {% csrf_token %}
+        {{ form }}
+        <input type="submit" value="Save">
+    </form>
 {% endblock %}
