--- a/encyclopedia/templates/encyclopedia/entry.html
+++ b/encyclopedia/templates/encyclopedia/entry.html
@@ -6,5 +6,5 @@
 
 {% block body %}
     {{ entry_content|safe }}
-    <a href="{% url 'edit_page' entry_name=entry_title %}">Edit.</a>
+    <a href="{% url 'edit' entry_name=entry_title %}">Edit.</a>
 {% endblock %}
