--- a/encyclopedia/templates/encyclopedia/error.html
+++ b/encyclopedia/templates/encyclopedia/error.html
@@ -1,8 +1,8 @@
-{% extends "encyclopedia/layout.html" %}
-{% block title %}
-    Error.
-{% endblock %}
+
+{% extends 'layout.html' %}
 
 {% block body %}
-    <h1>Entry not found.</h1>
+
+<h1 > Error 404 : Page Not Found </h1>
+
 {% endblock %}
