--- a/encyclopedia/templates/encyclopedia/layout.html
+++ b/encyclopedia/templates/encyclopedia/layout.html
@@ -1,41 +1,63 @@
+
 {% load static %}
 
 <!DOCTYPE html>
 
 <html lang="en">
-     
     <head>
-          <meta charset="utf-8">
-          <meta name="viewport" content="width=device-width, initial-scale=1">
-           <meta http-equiv="x-ua-compatible" content="ie=edge">
-         
-         <title>{% block title %} {% endblock %}</title>
+        <title>{% block title %} {% endblock %}</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
         <link href="{% static 'encyclopedia/styles.css' %}" rel="stylesheet">
     </head>
+   
     <body>
         <div class="row">
             <div class="sidebar col-lg-2 col-md-3">
-                <h2>Wiki</h2>
-                <form>
-                    
-                    <input class="search" type="text" name="q" placeholder="Search Encyclopedia" >
-                    
+                
+                <h2>wikipedia</h2>
+                <form action="{% url 'search' %}" method="post">
+                    {% csrf_token %}
+                    {{ search_form }}
                 </form>
                 <div>
                     <a href="{% url 'index' %}">Home</a>
                 </div>
                 <div>
-                    Create New Page
+                    <a href ="{% url 'create' %}">Create New Page</a>
                 </div>
                 <div>
-                    Random Page
+                    <a href ="{% url 'random' %}">Random Page</a>
                 </div>
                 {% block nav %}
-            
                 {% endblock %}
             </div>
             <div class="main col-lg-10 col-md-9">
+
+                 <!--Flashed Messages -->
+                 {% if messages %}
+                 <div class="messages">
+                 {% for message in messages %}
+                   <!-- Warning Messages-->
+                   {% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}
+                   <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                     <strong>{{ message}}</strong>
+                     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                     <span aria-hidden="true">&times;</span>
+                     </button>
+                    </div>
+                   {% endif %}
+                   <!-- Success Messages -->
+                   {% if message.level == DEFAULT_MESSAGE_LEVELS.SUCCESS %}
+                     <div class="alert alert-success alert-dismissible fade show" role="alert">
+                       {{ message}}
+                     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                     <span aria-hidden="true">&times;</span>
+                     </button>
+                     </div>
+                   {% endif %}
+                 {% endfor %}
+                 </div>
+               {% endif %}
                 {% block body %}  {% endblock %}
             </div>
         </div>
