--- a/encyclopedia/templates/encyclopedia/search.html
+++ b/encyclopedia/templates/encyclopedia/search.html
@@ -1,18 +1,25 @@
 
 
-{% extends 'encyclopedia/layout.html' %}
+{% extends "encyclopedia/layout.html" %}
+
+{% block title %}
+    Search Results: {{title}}
+{% endblock %}
 
 {% block body %}
 
-    <h1>Search results.</h1>
+  <h1>Search Results for "{{title}}":</h1>
+
+  {% if related_titles %}
+  <p>Related Entries:</p>
     <ul>
-        {% if search_results %}
-            {% for item in search_results %}
-                <li><a href="/wiki/{{ item }}">{{ item }}</a></li>
-            {% endfor %}
-        {% else %}
-            <h3>Sorry. Entry not found.</h3>
-        {% endif %}
+      {% for title in related_titles %}
+      <li><a href="{% url 'entry' title=title %}">{{title}}</a></li>
+      {% endfor %}
     </ul>
+  {% else %}
+  <p>No search results found for "{{title}}" on qwikipedia.</p>
+  <p>Check the <a href="{% url 'index' %}">index</a> page to see available articles.</p>
+  {% endif %}
 
 {% endblock %}
