--- a/encyclopedia/static/encyclopedia/styles.css
+++ b/encyclopedia/static/encyclopedia/styles.css
@@ -2,7 +2,11 @@ body {
     margin: 0;
     background-color: white;
 }
-
+ .search{
+    width: 0px;
+    font-size: 15px;
+    line-height: 15px;
+ }
 code {
     white-space: pre;
 }
@@ -10,17 +14,13 @@ code {
 h1 {
     margin-top: 0px;
     padding-top: 20px;
+    color:blue
+
 }
 
 textarea {
-    margin: 10px 0 10px 0;
-    height: 65vh;
+    height: 90vh;
     width: 80%;
-    display: block;
-}
-
-input[type="submit"] {
-  display: block;
 }
 
 .main {
