--- a/encyclopedia/templates/encyclopedia/layout.html
+++ b/encyclopedia/templates/encyclopedia/layout.html
@@ -28,6 +28,9 @@
                 <div>
                     <a href ="{% url 'random' %}">Random Page</a>
                 </div>
+                <div>
+                    <p>© 2022 Moukcamer</p>
+                </div>
                 {% block nav %}
                 {% endblock %}
             </div>
